after rsa has broken

--- a/monkey-middle-side/CMakeLists.txt
+++ b/monkey-middle-side/CMakeLists.txt
@@ -9,7 +9,29 @@ set(VLIBS_DIR ${CMAKE_CURRENT_LIST_DIR}/../vlibs2)
 include(${VLIBS_DIR}/cmake/threads.cmake)
 include(${VLIBS_DIR}/cmake/vnetwork.cmake)
 include(${VLIBS_DIR}/cmake/vcmdline_parser.cmake)
+include(${VLIBS_DIR}/cmake/vbyte_buffer.cmake)
 set(SRC ${V_HEADERS} ${V_SOURCES})
 
+# import pkg-config
+find_package( PkgConfig REQUIRED )
+if (PKG_CONFIG_FOUND)
+    pkg_check_modules(sodium REQUIRED libsodium)
+endif()
+if ( NOT sodium_FOUND )
+    message( FATAL_ERROR sodium )
+endif()
+message( STATUS "sodium libs: '${sodium_LIBRARIES}', inc: '${sodium_INCLUDEDIR}'" )
+include_directories( ${sodium_INCLUDEDIR}/sodium )
+set( V_LIBRARIES ${V_LIBRARIES} ${sodium_LIBRARIES} )
+
+set( SRC ${SRC}
+     monkey_rsa.cpp
+     monkey_rsa.h
+     monkey_aes.h
+     monkey_aes.cpp
+    )
+
+find_package(OpenSSL REQUIRED)
+
 add_executable(${PROJECT_NAME} main.cpp ${SRC})
-target_link_libraries( ${PROJECT_NAME} ${V_LIBRARIES} )
+target_link_libraries( ${PROJECT_NAME} ${V_LIBRARIES} ssh OpenSSL::SSL )
