--- a/monkey-middle-side/CMakeLists.txt
+++ b/monkey-middle-side/CMakeLists.txt
@@ -8,8 +8,11 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(VLIBS_DIR ${CMAKE_CURRENT_LIST_DIR}/../vlibs2)
 include(${VLIBS_DIR}/cmake/threads.cmake)
 include(${VLIBS_DIR}/cmake/vnetwork.cmake)
+include(${VLIBS_DIR}/cmake/vtimer.cmake)
 include(${VLIBS_DIR}/cmake/vcmdline_parser.cmake)
 include(${VLIBS_DIR}/cmake/vbyte_buffer.cmake)
+include(${VLIBS_DIR}/cmake/vsettings.cmake)
+include(${VLIBS_DIR}/cmake/vcmdline_parser.cmake)
 set(SRC ${V_HEADERS} ${V_SOURCES})
 
 # import pkg-config
@@ -27,8 +30,18 @@ set( V_LIBRARIES ${V_LIBRARIES} ${sodium_LIBRARIES} )
 set( SRC ${SRC}
      monkey_rsa.cpp
      monkey_rsa.h
-     monkey_aes.h
      monkey_aes.cpp
+     monkey_aes.h
+     node_socket.cpp
+     node_socket.h
+     node_server.cpp
+     node_server.h
+     settings.cpp
+     settings.h
+     side_socket.cpp
+     side_socket.h
+     keyval.cpp
+     keyval.h
     )
 
 find_package(OpenSSL REQUIRED)
