ready monkey-node

--- a/monkey-node/CMakeLists.txt
+++ b/monkey-node/CMakeLists.txt
@@ -15,33 +15,24 @@ include(${VLIBS_DIR}/cmake/vsettings.cmake)
 include(${VLIBS_DIR}/cmake/vcmdline_parser.cmake)
 set(SRC ${V_HEADERS} ${V_SOURCES})
 
-# import pkg-config
-#find_package( PkgConfig REQUIRED )
-#if (PKG_CONFIG_FOUND)
-#    pkg_check_modules(sodium REQUIRED libsodium)
-#endif()
-#if ( NOT sodium_FOUND )
-#    message( FATAL_ERROR sodium )
-#endif()
-#message( STATUS "sodium libs: '${sodium_LIBRARIES}', inc: '${sodium_INCLUDEDIR}'" )
-#include_directories( ${sodium_INCLUDEDIR}/sodium )
-#set( V_LIBRARIES ${V_LIBRARIES} ${sodium_LIBRARIES} )
+set( SHARED_DIR ${CMAKE_CURRENT_LIST_DIR}/../monkey-shared )
+include_directories(${SHARED_DIR})
+set( SRC ${SRC}
+    ${SHARED_DIR}/monkey_rsa.cpp
+    ${SHARED_DIR}/monkey_rsa.h
+    ${SHARED_DIR}/monkey_aes.cpp
+    ${SHARED_DIR}/monkey_aes.h
+    ${SHARED_DIR}/settings.cpp
+    ${SHARED_DIR}/settings.h
+    ${SHARED_DIR}/keyval.cpp
+    ${SHARED_DIR}/keyval.h
+   )
 
 set( SRC ${SRC}
-     monkey_rsa.cpp
-     monkey_rsa.h
-     monkey_aes.cpp
-     monkey_aes.h
      node_socket.cpp
      node_socket.h
      node_server.cpp
      node_server.h
-     settings.cpp
-     settings.h
-     side_socket.cpp
-     side_socket.h
-     keyval.cpp
-     keyval.h
     )
 
 find_package(OpenSSL REQUIRED)
