--- a/dock/Dockerfile
+++ b/dock/Dockerfile
@@ -7,13 +7,14 @@ RUN apt install -y openssh-server
 
 RUN useradd el
 RUN passwd -d el
+RUN chpasswd el:password1
 
 RUN echo >>/etc/ssh/sshd_config "AllowAgentForwarding yes"
 RUN echo >>/etc/ssh/sshd_config "AllowTcpForwarding yes"
-RUN echo >>/etc/ssh/sshd_config "Port 2222"
+RUN echo >>/etc/ssh/sshd_config "Port 2221"
 
 CMD service ssh restart
 
-EXPOSE 2222
+EXPOSE 2221
 
 
