--- a/run-once/CMakeLists.txt
+++ b/run-once/CMakeLists.txt
@@ -8,5 +8,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(VLIBS_DIR ../vlibs2)
 include(${VLIBS_DIR}/cmake/vcmdline_parser.cmake)
 include(${VLIBS_DIR}/cmake/vbyte_buffer.cmake)
+include(${VLIBS_DIR}/cmake/vlog.cmake)
 
 add_executable(${PROJECT_NAME} main.cpp ${V_SOURCES} ${V_HEADERS})
